<resources>
    <string name="app_name">Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_role_select">RoleSelectActivity</string>
    <string name="title_activity_teacher_class_list">TeacherClassList</string>
    <string name="no_classes_available">No classes available.</string>
    <string name="question_bank">Question Bank</string>
    <string name="quiz_bank">Quiz Bank</string>
    <string name="classes">Classes</string>
    <string name="create_class">Create Class</string>
    <string name="title_activity_create_class">CreateClassActivity</string>
    <string name="class_name">Class Name</string>
    <string name="class_section_number">Class Section Number</string>
    <string name="class_start_date">Class Start Date</string>
    <string name="class_end_dare">Class End Dare</string>
    <string name="title_activity_question_list">QuestionListActivity</string>
    <string name="create_question">Create Question</string>
    <string name="title_activity_question_view">QuestionViewActivity</string>
    <string name="title_activity_create_question">CreateQuestionActivity</string>
    <string name="question">Question:</string>
    <string name="question_text">Question Text</string>
    <string name="question_category">Question Category</string>
    <string name="points_worth">Points Worth</string>
    <string name="is_multiselect">Is Multiselect</string>
    <string name="choice">Choice:</string>
    <string name="choice_text">Choice Text</string>
    <string name="is_correct">Is Correct</string>
    <string name="list_of_created_choices">List of created choices:</string>
    <string name="add_choice">Add Choice</string>
    <string name="temp">Temp</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_quiz_list">QuizListActivity</string>
    <string name="no_questions_available">No questions available</string>
    <string name="no_quizzes_available">No quizzes available</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="title_activity_quiz_view">QuizViewActivity</string>
    <string name="questions">Questions:</string>
    <string name="title_activity_create_quiz">CreateQuizActivity</string>
    <string name="quiz">Quiz:</string>
    <string name="quiz_name">Quiz Name</string>
    <string name="quiz_instructions">Quiz Instructions</string>
    <string name="quiz_category">Quiz Category</string>
    <string name="title_activity_class_view">ClassViewActivity</string>
    <string name="administer_quiz">Administer Quiz</string>
    <string name="title_activity_student_quiz_session_list">StudentQuizSessionList</string>
    <string name="title_activity_student_choice_view">StudentChoiceViewActivity</string>
    <string name="title_activity_administer_quiz">AdministerQuizActivity</string>
    <string name="duration_of_quiz_availability_in_minutes">Duration of Quiz Availability in Minutes</string>
    <string name="title_activity_student_class_list">StudentClassList</string>
    <string name="join_class">Join Class</string>
    <string name="title_activity_class_view_student">ClassViewStudentActivity</string>
    <string name="view_taken_quizzes">View Taken Quizzes</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="title_activity_join_class">JoinClassActivity</string>
    <string name="title_activity_take_quiz">TakeQuizActivity</string>
    <string name="submit_quiz">Submit Quiz</string>
    <string name="choice_entry">Choice Entry:</string>
    <string name="multiselect_question">Multiselect Question</string>
    <string name="correct_choice">Correct Choice</string>
    <string name="title_activity_quiz_session_list">QuizSessionListActivity</string>
    <string name="title_activity_quiz_session_stats">QuizSessionStatsActivity</string>
    <string name="quiz_sessions">Quiz Sessions</string>
    <string name="subcategory">Subcategory</string>
    <string name="category">Category</string>
    <string name="search_button">search button</string>
    <string name="clear_search_button">clear search button</string>
    <string name="title_activity_broadcast_teacher">BroadcastTeacherActivity</string>
    <string name="logout">Logout</string>
    <string name="title_activity_broadcast_class_teacher">BroadcastClassTeacherActivity</string>
    <string name="add_students">Add Students</string>
    <string name="export_quizzes">Export Quizzes</string>
</resources>
